# density

./: CMakeLists.txt  README.md
cmake/: cmakepp.cmake
src/: Makefile  block_decode.c  block_decode.h  block_encode.c  block_encode.h  block_footer.c  block_footer.h  block_header.c  block_header.h  block_mode_marker.c  block_mode_marker.h  buffers.c  byte_buffer.c  byte_buffer.h  density_api.h  globals.c  globals.h  kernel_argonaut.h  kernel_argonaut_decode.c  kernel_argonaut_decode.h  kernel_argonaut_dictionary.c  kernel_argonaut_dictionary.h  kernel_argonaut_encode.c  kernel_argonaut_encode.h  kernel_argonaut_le.data  kernel_chameleon.h  kernel_chameleon_decode.c  kernel_chameleon_decode.h  kernel_chameleon_dictionary.c  kernel_chameleon_dictionary.h  kernel_chameleon_encode.c  kernel_chameleon_encode.h  kernel_cheetah_decode.c  kernel_cheetah_encode.c  kernel_encode_warp_pointer.c  kernel_encode_warp_pointer.h  kernel_encode_warp_reader.h  kernel_lion_decode.c  kernel_lion_encode.c  kernel_mandala_decode.c  (+21 more)
src/msvc/: unistd.h
tests/: roundtrip_encoding_test.c
